--- a/VirtualCones/App.config
+++ b/VirtualCones/App.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
         <add key="softwareValidated" value="true" />
         <add key="Debug" value="false" />
-		<add key="machineDeliveryValidationPerformed" value="true"/>
+		<add key="machineDeliveryValidationPerformed" value="true" />
         <add key="EULAAgreed" value="false" />
     </appSettings>
   <runtime>
@@ -42,6 +42,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Tasks.Extensions" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.2.1.0" newVersion="4.2.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Prism" publicKeyToken="40ee6c3a2184dc59" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.1.97.5141" newVersion="8.1.97.5141" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
