--- a/.github/workflows/pipeline_15.6.yaml
+++ b/.github/workflows/pipeline_15.6.yaml
@@ -6,18 +6,18 @@ on:
       dateInput:
         description: 'Expiration Date'
         required: true
-        default: '6/1/2025'
+        default: '12/31/2025'
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: windows-2022
     env:
       GITHUB_WORKSPACE_PACKAGES_PATH: ..\packages\ESAPI.15.6.0\lib\net45\
       SOLUTION_NAME: DoseRateEditor
       PROJECT_NAME_DOSERATEEDITOR: DoseRateEditor
       PROJECT_NAME_VIRTUALCONE: VirtualCones_MCB
       FOLDER_NAME_VIRTUALCONE: VirtualCones
-      CONFIGURATION: Debug
+      CONFIGURATION: Release
       MAJOR_VERSION: 1
       MINOR_VERSION: 0
       PATCH_VERSION: 0
