--- a/.github/workflows/pipeline_16.1.yaml
+++ b/.github/workflows/pipeline_16.1.yaml
@@ -1,8 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: Build ESAPI Script - v16.1
 
 on:
@@ -11,19 +6,19 @@ on:
       dateInput:
         description: 'Expiration Date'
         required: true
-        default: '6/1/2025'
+        default: '12/31/2025'
 
 jobs:
   build:
     name: Build ESAPI Script - v16.1
-    runs-on: windows-2019
+    runs-on: windows-2022
     env:
       GITHUB_WORKSPACE_PACKAGES_PATH: ..\packages\ESAPI.16.1.0\lib\net461\
       SOLUTION_NAME: DoseRateEditor
       PROJECT_NAME_DOSERATEEDITOR: DoseRateEditor
       PROJECT_NAME_VIRTUALCONE: VirtualCones_MCB
       FOLDER_NAME_VIRTUALCONE: VirtualCones
-      CONFIGURATION: Debug
+      CONFIGURATION: Release
       MAJOR_VERSION: 1
       MINOR_VERSION: 0
       PATCH_VERSION: 0
@@ -67,6 +62,9 @@ jobs:
       uses: NuGet/setup-nuget@v1.0.6
       with:
         nuget-version: latest
+
+    - name: Download Microsoft NETFramework ReferenceAssemblies 4.6.1
+      run: nuget install Microsoft.NETFramework.ReferenceAssemblies.net461 -OutputDirectory .\packages
 
     - name: Download nuget packages for DoseRateEditor
       run: nuget install .\${{ env.PROJECT_NAME_DOSERATEEDITOR}}\packages.config -OutputDirectory .\packages
