--- a/.github/workflows/pipeline_18.0.yaml
+++ b/.github/workflows/pipeline_18.0.yaml
@@ -6,7 +6,7 @@ on:
       dateInput:
         description: 'Expiration Date'
         required: true
-        default: '6/1/2025'
+        default: '12/31/2025'
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
       PROJECT_NAME_DOSERATEEDITOR: DoseRateEditor
       PROJECT_NAME_VIRTUALCONE: VirtualCones_MCB
       FOLDER_NAME_VIRTUALCONE: VirtualCones
-      CONFIGURATION: Debug
+      CONFIGURATION: Release
       MAJOR_VERSION: 1
       MINOR_VERSION: 0
       PATCH_VERSION: 0
