--- a/VirtualCones/packages.config
+++ b/VirtualCones/packages.config
@@ -1,22 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommunityToolkit.Mvvm" version="8.4.0" targetFramework="net472" />
-  <package id="FastDeepCloner" version="1.3.6" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="9.0.1" targetFramework="net472" />
-  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.3" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.NETFramework.ReferenceAssemblies.net472" version="1.0.3" targetFramework="net472" developmentDependency="true" />
-  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net472" />
-  <package id="OxyPlot.Core" version="2.1.0" targetFramework="net472" />
-  <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net472" />
-  <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net472" />
-  <package id="Prism.Core" version="8.1.97" targetFramework="net472" />
-  <package id="Prism.Wpf" version="8.1.97" targetFramework="net472" />
-  <package id="System.Buffers" version="4.6.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="9.0.1" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
-  <package id="System.Configuration.ConfigurationManager" version="9.0.5" targetFramework="net472" />
-  <package id="System.Memory" version="4.6.0" targetFramework="net472" />
-  <package id="System.Numerics.Vectors" version="4.6.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.6.0" targetFramework="net472" />
+  <package id="CommunityToolkit.Mvvm" version="8.0.0" targetFramework="net461" />
+  <package id="FastDeepCloner" version="1.3.6" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net461" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies" version="1.0.3" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.NETFramework.ReferenceAssemblies.net461" version="1.0.3" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
+  <package id="OxyPlot.Core" version="2.1.0" targetFramework="net461" />
+  <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net461" />
+  <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net461" />
+  <package id="Prism.Core" version="8.1.97" targetFramework="net461" />
+  <package id="Prism.Wpf" version="8.1.97" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
