--- a/VirtualCones/VirtualCones_MCB.csproj
+++ b/VirtualCones/VirtualCones_MCB.csproj
@@ -208,17 +208,39 @@
     <Content Include="lib\EulaVerification.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Resource Include="Settings.xml" />
-    <Resource Include="Maps\Exponential_Inv.txt" />
-    <Resource Include="Maps\Eyes.txt" />
-    <Resource Include="Maps\Linear180.txt" />
-    <Resource Include="Maps\Linear180_Inv.txt" />
-    <Resource Include="Maps\Linear90.txt" />
-    <Resource Include="Maps\Linear90_Inv.txt" />
-    <Resource Include="Maps\Sin360.txt" />
-    <Resource Include="Maps\Exponential.txt" />
-    <Resource Include="Maps\Cos360.txt" />
-    <Resource Include="Maps\Constant.txt" />
+    <Resource Include="Settings.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Exponential_Inv.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Eyes.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Linear180.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Linear180_Inv.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Linear90.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Linear90_Inv.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Sin360.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Exponential.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Cos360.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Maps\Constant.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
     <Resource Include="Resources\Maps\Constant.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
