--- a/VirtualCones/App.config
+++ b/VirtualCones/App.config
@@ -4,9 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
     <appSettings>
-        <add key="softwareValidated" value="true" />
+        <add key="softwareValidated" value="false" />
         <add key="Debug" value="false" />
-		<add key="machineDeliveryValidationPerformed" value="true" />
+		<add key="machineDeliveryValidationPerformed" value="false" />
         <add key="EULAAgreed" value="false" />
     </appSettings> 
 </configuration>
